--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1020,7 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_6ad05_\">\n",
+       "<table id=\"T_5a480_\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank\" >&nbsp;</th>\n",
@@ -1039,48 +1039,48 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_6ad05_level0_row0\" class=\"row_heading level0 row0\" >92</th>\n",
-       "      <th id=\"T_6ad05_level1_row0\" class=\"row_heading level1 row0\" >Final Critic</th>\n",
-       "      <td id=\"T_6ad05_row0_col0\" class=\"data row0 col0\" >13</td>\n",
-       "      <td id=\"T_6ad05_row0_col1\" class=\"data row0 col1\" >$4.61</td>\n",
-       "      <td id=\"T_6ad05_row0_col2\" class=\"data row0 col2\" >$59.99</td>\n",
+       "      <th id=\"T_5a480_level0_row0\" class=\"row_heading level0 row0\" >92</th>\n",
+       "      <th id=\"T_5a480_level1_row0\" class=\"row_heading level1 row0\" >Final Critic</th>\n",
+       "      <td id=\"T_5a480_row0_col0\" class=\"data row0 col0\" >13</td>\n",
+       "      <td id=\"T_5a480_row0_col1\" class=\"data row0 col1\" >$4.61</td>\n",
+       "      <td id=\"T_5a480_row0_col2\" class=\"data row0 col2\" >$59.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6ad05_level0_row1\" class=\"row_heading level0 row1\" >178</th>\n",
-       "      <th id=\"T_6ad05_level1_row1\" class=\"row_heading level1 row1\" >Oathbreaker, Last Hope of the Breaking Storm</th>\n",
-       "      <td id=\"T_6ad05_row1_col0\" class=\"data row1 col0\" >12</td>\n",
-       "      <td id=\"T_6ad05_row1_col1\" class=\"data row1 col1\" >$4.23</td>\n",
-       "      <td id=\"T_6ad05_row1_col2\" class=\"data row1 col2\" >$50.76</td>\n",
+       "      <th id=\"T_5a480_level0_row1\" class=\"row_heading level0 row1\" >178</th>\n",
+       "      <th id=\"T_5a480_level1_row1\" class=\"row_heading level1 row1\" >Oathbreaker, Last Hope of the Breaking Storm</th>\n",
+       "      <td id=\"T_5a480_row1_col0\" class=\"data row1 col0\" >12</td>\n",
+       "      <td id=\"T_5a480_row1_col1\" class=\"data row1 col1\" >$4.23</td>\n",
+       "      <td id=\"T_5a480_row1_col2\" class=\"data row1 col2\" >$50.76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6ad05_level0_row2\" class=\"row_heading level0 row2\" >145</th>\n",
-       "      <th id=\"T_6ad05_level1_row2\" class=\"row_heading level1 row2\" >Fiery Glass Crusader</th>\n",
-       "      <td id=\"T_6ad05_row2_col0\" class=\"data row2 col0\" >9</td>\n",
-       "      <td id=\"T_6ad05_row2_col1\" class=\"data row2 col1\" >$4.58</td>\n",
-       "      <td id=\"T_6ad05_row2_col2\" class=\"data row2 col2\" >$41.22</td>\n",
+       "      <th id=\"T_5a480_level0_row2\" class=\"row_heading level0 row2\" >145</th>\n",
+       "      <th id=\"T_5a480_level1_row2\" class=\"row_heading level1 row2\" >Fiery Glass Crusader</th>\n",
+       "      <td id=\"T_5a480_row2_col0\" class=\"data row2 col0\" >9</td>\n",
+       "      <td id=\"T_5a480_row2_col1\" class=\"data row2 col1\" >$4.58</td>\n",
+       "      <td id=\"T_5a480_row2_col2\" class=\"data row2 col2\" >$41.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6ad05_level0_row3\" class=\"row_heading level0 row3\" >132</th>\n",
-       "      <th id=\"T_6ad05_level1_row3\" class=\"row_heading level1 row3\" >Persuasion</th>\n",
-       "      <td id=\"T_6ad05_row3_col0\" class=\"data row3 col0\" >9</td>\n",
-       "      <td id=\"T_6ad05_row3_col1\" class=\"data row3 col1\" >$3.22</td>\n",
-       "      <td id=\"T_6ad05_row3_col2\" class=\"data row3 col2\" >$28.99</td>\n",
+       "      <th id=\"T_5a480_level0_row3\" class=\"row_heading level0 row3\" >132</th>\n",
+       "      <th id=\"T_5a480_level1_row3\" class=\"row_heading level1 row3\" >Persuasion</th>\n",
+       "      <td id=\"T_5a480_row3_col0\" class=\"data row3 col0\" >9</td>\n",
+       "      <td id=\"T_5a480_row3_col1\" class=\"data row3 col1\" >$3.22</td>\n",
+       "      <td id=\"T_5a480_row3_col2\" class=\"data row3 col2\" >$28.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6ad05_level0_row4\" class=\"row_heading level0 row4\" >108</th>\n",
-       "      <th id=\"T_6ad05_level1_row4\" class=\"row_heading level1 row4\" >Extraction, Quickblade Of Trembling Hands</th>\n",
-       "      <td id=\"T_6ad05_row4_col0\" class=\"data row4 col0\" >9</td>\n",
-       "      <td id=\"T_6ad05_row4_col1\" class=\"data row4 col1\" >$3.53</td>\n",
-       "      <td id=\"T_6ad05_row4_col2\" class=\"data row4 col2\" >$31.77</td>\n",
+       "      <th id=\"T_5a480_level0_row4\" class=\"row_heading level0 row4\" >108</th>\n",
+       "      <th id=\"T_5a480_level1_row4\" class=\"row_heading level1 row4\" >Extraction, Quickblade Of Trembling Hands</th>\n",
+       "      <td id=\"T_5a480_row4_col0\" class=\"data row4 col0\" >9</td>\n",
+       "      <td id=\"T_5a480_row4_col1\" class=\"data row4 col1\" >$3.53</td>\n",
+       "      <td id=\"T_5a480_row4_col2\" class=\"data row4 col2\" >$31.77</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f98bb0864c0>"
+       "<pandas.io.formats.style.Styler at 0x7f98bb19bd00>"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,11 +1088,11 @@
    "source": [
     "item_name = purchase_data[[\"Item ID\", \"Item Name\", \"Price\"]]\n",
     "\n",
-    "item_group = item_name.groupby([\"Item ID\",\"Item Name\"])\n",
+    "item_groups = item_name.groupby([\"Item ID\",\"Item Name\"])\n",
     "\n",
-    "purchase_item = item_group[\"Price\"].count()\n",
+    "purchase_item = item_groups[\"Price\"].count()\n",
     "\n",
-    "purchase_value = (item_group[\"Price\"].sum()) \n",
+    "purchase_value = (item_groups[\"Price\"].sum()) \n",
     "\n",
     "price = purchase_value/purchase_item\n",
     "\n",
@@ -1128,10 +1128,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "</style>\n",
+       "<table id=\"T_51865_\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank\" >&nbsp;</th>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th class=\"col_heading level0 col0\" >Purchase Count</th>\n",
+       "      <th class=\"col_heading level0 col1\" >Item Price</th>\n",
+       "      <th class=\"col_heading level0 col2\" >Total Purchase Value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th class=\"index_name level0\" >Item ID</th>\n",
+       "      <th class=\"index_name level1\" >Item Name</th>\n",
+       "      <th class=\"blank col0\" >&nbsp;</th>\n",
+       "      <th class=\"blank col1\" >&nbsp;</th>\n",
+       "      <th class=\"blank col2\" >&nbsp;</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_51865_level0_row0\" class=\"row_heading level0 row0\" >92</th>\n",
+       "      <th id=\"T_51865_level1_row0\" class=\"row_heading level1 row0\" >Final Critic</th>\n",
+       "      <td id=\"T_51865_row0_col0\" class=\"data row0 col0\" >13</td>\n",
+       "      <td id=\"T_51865_row0_col1\" class=\"data row0 col1\" >$4.61</td>\n",
+       "      <td id=\"T_51865_row0_col2\" class=\"data row0 col2\" >$59.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_51865_level0_row1\" class=\"row_heading level0 row1\" >178</th>\n",
+       "      <th id=\"T_51865_level1_row1\" class=\"row_heading level1 row1\" >Oathbreaker, Last Hope of the Breaking Storm</th>\n",
+       "      <td id=\"T_51865_row1_col0\" class=\"data row1 col0\" >12</td>\n",
+       "      <td id=\"T_51865_row1_col1\" class=\"data row1 col1\" >$4.23</td>\n",
+       "      <td id=\"T_51865_row1_col2\" class=\"data row1 col2\" >$50.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_51865_level0_row2\" class=\"row_heading level0 row2\" >82</th>\n",
+       "      <th id=\"T_51865_level1_row2\" class=\"row_heading level1 row2\" >Nirvana</th>\n",
+       "      <td id=\"T_51865_row2_col0\" class=\"data row2 col0\" >9</td>\n",
+       "      <td id=\"T_51865_row2_col1\" class=\"data row2 col1\" >$4.90</td>\n",
+       "      <td id=\"T_51865_row2_col2\" class=\"data row2 col2\" >$44.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_51865_level0_row3\" class=\"row_heading level0 row3\" >145</th>\n",
+       "      <th id=\"T_51865_level1_row3\" class=\"row_heading level1 row3\" >Fiery Glass Crusader</th>\n",
+       "      <td id=\"T_51865_row3_col0\" class=\"data row3 col0\" >9</td>\n",
+       "      <td id=\"T_51865_row3_col1\" class=\"data row3 col1\" >$4.58</td>\n",
+       "      <td id=\"T_51865_row3_col2\" class=\"data row3 col2\" >$41.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_51865_level0_row4\" class=\"row_heading level0 row4\" >103</th>\n",
+       "      <th id=\"T_51865_level1_row4\" class=\"row_heading level1 row4\" >Singed Scalpel</th>\n",
+       "      <td id=\"T_51865_row4_col0\" class=\"data row4 col0\" >8</td>\n",
+       "      <td id=\"T_51865_row4_col1\" class=\"data row4 col1\" >$4.35</td>\n",
+       "      <td id=\"T_51865_row4_col2\" class=\"data row4 col2\" >$34.80</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f987808d910>"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "most_profitable_format = popular_items.sort_values([\"Total Purchase Value\"],ascending=False).head()\n",
+    "most_profitable_format.style.format({\"Item Price\":\"${:,.2f}\",\"Total Purchase Value\":\"${:,.2f}\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
